# kmiller

./: .gitignore  CMakeLists.txt  PATCHNOTES.md  README.md  ROADMAP.md
data/: kmiller.portal  org.freedesktop.impl.portal.desktop.kmiller.service
docs/: FINDER_PARITY_AUDIT.md  INDEX.md  KMILLER_ARCHAEOLOGY_INVENTORY.md  KMILLER_CODEBASE_AUDIT.md  KMILLER_CONVERSATION_ITERATIONS.md  KMILLER_DAILY_DRIVER_AUDIT.md  KMILLER_EARLY_FILE_GROUPINGS.md  KMILLER_EARLY_VERSION_RECOVERY.md  KMILLER_FEATURE_TIMELINE.md  KMILLER_FIRST_SLICE_TASKLIST.md  KMILLER_GENESIS_SOURCE_MAP.md  KMILLER_GENESIS_TIMELINE.md  KMILLER_IMPLEMENTATION_CHECKLIST.md  KMILLER_PRE_030_LINEAGE.md  KMILLER_RECOVERABILITY_MATRIX.md  KMILLER_RECOVERED_SNAPSHOTS.md  KMILLER_RELEASE_ERA_RECOVERY.md  KMILLER_RETROSPECTIVE.md  KMILLER_ROADMAP.md  KMILLER_VIEW_MODE_REGRESSION_MATRIX.md  PATHBAR_HISTORY.md  RELEASE_NOTES_5.25.1.md  RELEASE_NOTES_5.25.4.md  RELEASE_NOTES_5.25.md  VISUAL_PARITY_CHECKLIST.md
docs/recovered-src/: MANIFEST.md
docs/recovered-src/0.3.0-versioned-install-architecture/: CMakeLists.structured-placement.cmake  CMakeLists.top-snippet.cmake  build-and-install-0.4.0-example.sh
docs/recovered-src/0.3.0-versioned-install-architecture/packaging/: kmiller.desktop  layout.txt  make_installer.sh
docs/recovered-src/0.3.0-versioned-install-architecture/packaging/config/: config.xml
docs/recovered-src/0.3.0-versioned-install-architecture/tools/: kmiller-update.sh
docs/recovered-src/0.4.0-auto-versioning/: CMakeLists.auto-version.cmake  CMakeLists.install-layout.cmake  build-0.4.0-tagged.sh  build-0.4.1-cli-version.sh  build-0.4.2-cli-version.sh  clean-build-example.sh  desktop-exec-snippet.ini  full-clean-cmakelists-0.4.0.cmake
docs/recovered-src/0.4.0-auto-versioning/tools/: kmiller-update.sh
docs/recovered-src/0.4.2-rescue-stable/: full-repair-and-rebuild.sh  git-backup-and-tag.sh  push-origin-template.sh  rebuild-as-numeric-0.4.2.sh
docs/recovered-src/0.4.2-rescue-stable/src/: Pane.cpp  Pane.h
docs/recovered-src/0.4.2-rescue-stable/titlebar/: CMake-version-define.cmake  MainWindow_constructor_patch.cpp  main.cpp-version-parser.cpp  rebuild-0.4.2-stable.sh  window-title-example.txt
docs/recovered-src/0.4.6-self-archiving/: full-patch-and-build.sh  self-archiving-install-tree.txt
docs/recovered-src/0.4.6-self-archiving/tools/: build_release.sh
docs/recovered-src/0.4.7-release-experiment/: README.md  repair-and-build-0.4.7.sh
docs/recovered-src/0.5.0-patchnotes-release/: full-bootstrap-and-release.sh  quiet-build-wrapper-refresh.sh  run-0.5.0-release.sh
docs/recovered-src/0.5.0-patchnotes-release/tools/: build_release.sh  build_release.sh.msg224  make_patchnotes.sh  make_patchnotes.sh.msg224
docs/recovered-src/0.5.1-patchnotes-design/: README.md  install-layout.txt  run-0.5.1-release.sh  sample-changes.md  sample-diff.diff  sample-summary.md
docs/recovered-src/KMiller-source-tree-12file/: CMakeLists.txt
docs/recovered-src/KMiller-source-tree-12file/src/: MainWindow.cpp  MainWindow.h  MillerView.cpp  MillerView.h  Pane.cpp  Pane.h  QuickLookDialog.cpp  QuickLookDialog.h  SettingsDialog.cpp  SettingsDialog.h  ThumbCache.cpp
docs/recovered-src/KMiller2/: CMakeLists.txt  README.md
docs/recovered-src/KMiller2/src/: MainWindow.cpp  MainWindow.h  MillerView.cpp  MillerView.h  QuickLookDialog.cpp  TabPage.cpp  TabPage.h
docs/recovered-src/KMiller3/: CMakeLists.txt  README.md
docs/recovered-src/KMiller3-plus/: CMakeLists.txt
docs/recovered-src/KMiller3-plus/src/: MainWindow.cpp  MainWindow.h  MillerView.cpp  Pane.cpp  Pane.h  QuickLookDialog.cpp  SettingsDialog.cpp  SettingsDialog.h  ThumbCache.cpp
docs/recovered-src/KMiller3/src/: MainWindow.cpp  MainWindow.h  MillerView.cpp  MillerView.h  Pane.cpp  Pane.h  QuickLookDialog.h
docs/recovered-src/proto-dynamic-columns-3/: mainwindow.cpp
docs/recovered-src/proto-genesis-0/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
docs/recovered-src/proto-media-2/: mainwindow.cpp  mainwindow.h
docs/recovered-src/proto-packaged-kmiller-4/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
docs/recovered-src/proto-quicklook-1/: mainwindow.cpp  mainwindow.h
src/: ArchiveService.cpp  ArchiveService.h  DialogUtils.cpp  DialogUtils.h  FileChooserDialog.cpp  FileChooserDialog.h  FileChooserPortal.cpp  FileChooserPortal.h  FileOpsService.cpp  FileOpsService.h  MainWindow.cpp  MainWindow.h  MillerView.cpp  MillerView.h  OpenWithService.cpp  OpenWithService.h  Pane.cpp  Pane.h  PaneNavigationState.cpp  PaneNavigationState.h  PropertiesDialog.cpp  PropertiesDialog.h  QuickLookDialog.cpp  QuickLookDialog.h  SettingsDialog.cpp  SettingsDialog.h  ThumbCache.h  main.cpp  version.h
tests/smoke/: ldd_no_missing.sh
tools/: build_release.sh  kmiller-update.sh  kmiller_manual_qa_harness.py  make_patchnotes.sh  qa_headless.sh  run_manual_qa_harness.sh  smoke_release.sh
